--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,6 @@
 * {
   box-sizing: border-box;
-  font-family: "Rubik", sans-serif;
+  font-family: "Gotham", sans-serif;
   color: #393c41;
   margin: 0;
   padding: 0;
@@ -9,6 +9,17 @@
 body {
   width: 100%;
   overflow-x: hidden;
+}
+
+a {
+  text-decoration: none;
+  font-size: 15px;
+  font-weight: 500;
+}
+
+h1 {
+  font-weight: 500;
+  font-size: 42px;
 }
 
 @keyframes animateDown {
